<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.katsuki.administracintributariav2.ui.consultarusuario.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.katsuki.administracintributariav2.ui.vertareas.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.katsuki.administracintributariav2.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_solicitudes"
        android:name="com.katsuki.administracintributariav2.ui.solicitudes.SolicitudesFragment"
        android:label="@string/menu_solicitudes"
        tools:layout="@layout/fragment_solicitudes" />

    <fragment
        android:id="@+id/nav_agregar_contribuyente"
        android:name="com.katsuki.administracintributariav2.ui.agregarcontribuyente.AgregarContribuyenteFragment"
        android:label="@string/menu_agregar_contribuyente"
        tools:layout="@layout/fragment_agregar_contribuyente" />
</navigation>